exit option updated

--- a/index.css
+++ b/index.css
@@ -707,12 +707,32 @@ ul li::before {
         flex-direction: column;
         gap: 5px;
     }
+    .hamburger {
+        display: none; 
+        flex-direction: column;
+        justify-content: space-between;
+        width: 25px;
+        height: 20px;
+        cursor: pointer;
+        }
 
     .hamburger div {
-        width: 25px;
         height: 3px;
         background-color: black;
-    }
+        border-radius: 2px;
+        transition: all 0.3s ease;
+        }
+        nav.active .hamburger div:nth-child(1) {
+        transform: rotate(45deg) translate(5px, 5px);
+        }
+
+        nav.active .hamburger div:nth-child(2) {
+        opacity: 0;
+        }
+
+        nav.active .hamburger div:nth-child(3) {
+        transform: rotate(-45deg) translate(5px, -5px);
+        }
 }
 
 
